feat: Allow a user to create and get relationships

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -3,6 +3,10 @@ spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 spring.datasource.url=jdbc:sqlite:./main.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.sql.init.mode=always
-spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.batch.jdbc.initialize-schema=always
+spring.datasource.hikari.connection-init-sql=\
+  PRAGMA journal_mode=WAL;\
+  PRAGMA synchronous=NORMAL;\
+  PRAGMA cache_size=-10000;\
+  PRAGMA temp_store=MEMORY;
