feat: Test Relationship Create & Delete
Closes #9 #8

--- a/server/src/test/resources/application-integrationtest.properties
+++ b/server/src/test/resources/application-integrationtest.properties
@@ -9,3 +9,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.sql.init.mode=always
 spring.batch.jdbc.initialize-schema=always
+spring.datasource.hikari.connection-init-sql=
